src/FinancialForce Accounting/objects/codaAccountingCurrency__c.object
<CustomObject>
    <customHelpPage>codahelpcurrency</customHelpPage>
    <description>Stores the details of an accounting currency, including its ISO code.</description>
    <fields>
        <fullName>DecimalPlaces__c</fullName>
        <label>Decimal Places</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Home__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The company to which the currency is subscribed</description>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Accounting Currencies</relationshipLabel>
        <relationshipName>AccountingCurrencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Accounting Currency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Home__c</columns>
        <columns>Dual__c</columns>
        <columns>DecimalPlaces__c</columns>
        <columns>OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ISO Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Currencies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>